fix multi-select item size on firefox

--- a/rando/trekking/static/trekking/filters.less
+++ b/rando/trekking/static/trekking/filters.less
@@ -18,6 +18,19 @@
   max-height: 190px;
 }
 
+.chzn-container-multi .chzn-choices {
+  padding: 0 5px 0 0;
+}
+
+.chzn-container-multi .chzn-choices .search-choice {
+  box-sizing: border-box;
+  max-width: 100%;
+}
+
+.chzn-container-multi .chzn-choices .search-choice span{
+  word-wrap: break-word;
+}
+
 .chzn-container .chzn-results .highlighted {
   background-color: #919191;
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#919191', endColorstr='#747474', GradientType=0 );
